# canvas-downloader

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: protocol.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  lib.rs  main.rs
tools/: cdp-probe.mjs  fetch_ui_js.py  index-e9ba787d.js  list_chunks.py  ws_probe.py
