[package]
name = "canvas-downloader"
version = "0.1.0"
description = "Canvas@SJTU course video downloader"
authors = ["Canvas Downloader contributors"]
edition = "2024"

[lib]
name = "canvas_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["json", "multipart", "query", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = [] }
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }
